TODO
	* : Support multi-monitor setup
	* : Improve simplewc-msg functionality

v0.2 -> v0.3 Changes
	* main.c: Use getopt_long for command line arguments. keep track of startup
	pid and kill upon exit
	* src/output.c, include/output.h: Splitting output code from server code
	* src/layer.c: better support for multihead
	* src/output.c: Adding internal function to turn output on/off
	* util/simplewc-msg.c: turn output on/off by `simplewc-msg --set --output (on|off)`

2024-08-31
	* : Moving onto v0.3, upgrade to wlroots-0.18
	* README.md: Update for v0.3
	* src/client.c: add commit_notify and popup_commit_notify. xdg_new_surface_notify is split into
	xdg_new_toplevel_notify and xdg_new_popup_notify as per wlroots-0.18
	specification
	* src/server.c: Changes to output_state and pm_set_mode functions to align
	with wlroots-0.18 changes

2024-02-27
	* meson.build: Adding support for meson/ninja building

2024-02-25
	* src/input.c: Check input is libinput-compatible to prevent crash when nest-launching
	* src/client.c: get_client_at returns surface when a popup oriainates from layer_shell 

2024-02-20
	* src/input.c: Enable tap to click for touchpad inputs
	* src/config.c: Add config to enable tap to click
	* config/configrc: Add config to enable tap to click (touchpad_tap_click)
	* Makefile: Add libinput to linked library

2024-02-01
	* Makefile: clean up, make it easier to switch on/off XWAYLAND support

2024-01-31
	* config.c: Added xkb_layout and xkb_options
	* config.c: Bug fix. skip setting config_file_name when readConfiguration() is called from
	reloadConfiguration()
	* config/configrc: Fix buttons in mouse bindings (Button1 = Button_Left etc)
	* server.c: Added interface to activate urgency hints
	* ipc.c: Send tag flag with urgent clients
	* client.c: Set initial client position based on the cursor position
	* Makefile: Add install and uninstall scripts

2024-01-19
	* config.c: Remove unused config tag_names
	* config.c: Add reloadConfig() to reload config file