@@ -6,6 +6,9 @@ v0.2 -> v0.3 Changes
 	* main.c: Use getopt_long for command line arguments. keep track of startup
 	pid and kill upon exit
 	* src/output.c, include/output.h: Splitting output code from server code
+	* src/client.c: update_border_geometry() is separated from
+	set_client_geometry(), and called from commit_notify() when resize_request
+	flag is set
 	* src/layer.c: better support for multihead
 	* src/output.c: Adding internal function to turn output on/off
 	* util/simplewc-msg.c: turn output on/off by `simplewc-msg --set --output (on|off)`
